# injera

./: .gitignore  Cargo.toml  README.ko.md  README.md
src/: cli.rs  lib.rs  main.rs  renamer.rs
tests/: cli.rs  renamer.rs
