[package]
name = "rust_template"
version = "0.1.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "..." 
keywords = ["1", "2", "3"] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md"
repository = "https://github.com/myyrakle/rust_template"
documentation = "https://github.com/myyrakle/rust_template/blob/master/README.md"
homepage = "https://github.com/myyrakle/rust_template/blob/master/README.md"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
